# AIRO-Notes

./: LICENSE  README.md
Computer-Vision/Lecture Notes/: Main.tex
Interactive-Graphics/Assignment1/: project1.html  project1.js
Interactive-Graphics/Assignment2/: project2.js
Machine-Learning/: formulas.tex  theory.tex
Medical-Robotics/Lecture Notes/: Main.tex
NEng/Lecture Notes/: Main.tex
NEng/Lecture Notes/Lectures/: Lecture1.tex
RobotP/RP Github/exercises/rp_01_compilers_and_build_systems/: CMakeLists.txt
RobotP/RP Github/exercises/rp_01_compilers_and_build_systems/executables/: CMakeLists.txt
RobotP/RP Github/exercises/rp_01_compilers_and_build_systems/src/: CMakeLists.txt
RobotP/RP Github/exercises/rp_03_ros_basics/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
RobotP/RP Github/exercises/rp_03_ros_basics/log/: latest_build
RobotP/RosCodes/: .gitignore  pixi.toml  source.bash
RobotP/RosCodes/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
RobotP/RosCodes/log/: latest_build
RobotP/RosCodes/src/PubSub/: CMakeLists.txt
RobotP/RosCodes/src/Serv/: CMakeLists.txt  client.cpp  package.xml  service.cpp
RobotP/codes/ros2_ws/install/: local_setup.sh  setup.sh
RobotP/codes/ros2_ws/log/: latest_build
RobotP/notes/: QuestionsAnalysis.txt  questionnotes.txt  questions.txt
Robotics2/Lecture Notes/: Main.tex
Robotics2/Lecture Notes/Lectures/: Appendix.tex  ControlLaws.tex  Lecture1.tex  Lecture2.tex
(+23 files in other folders)
